Exp-2/output/hf-eval-data-v3-reuslt-34b-eval/f00762_video_action_recognition.err
  File "./f00762_video_action_recognition.py", line 62
    def test_video_action_recognition():
    ^
SyntaxError: invalid syntax
